22 Aug 2023 committed - OrderProcessingService and InventoryService finished need to fix loop problem in SecurityAuditorAware